force-app/main/default/objects/Magnati_Transaction_History__c/Magnati_Transaction_History__c.object-meta.xml
<CustomObject>
    <label>Magnati Transaction History</label>
    <nameField>
        <displayFormat>MT-{000000}</displayFormat>
        <label>Magnati Transaction History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Magnati Transaction Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>