force-app/main/default/objects/Magnati_Transaction_History__c/fields/CardBrand__c.field-meta.xml
<CustomField>
    <fullName>CardBrand__c</fullName>
    <label>CardBrand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>