force-app/main/default/objects/Magnati_Transaction_History__c/fields/CardMask__c.field-meta.xml
<CustomField>
    <fullName>CardMask__c</fullName>
    <label>CardMask</label>
    <length>255</length>
    <type>Text</type>
</CustomField>