force-app/main/default/objects/Magnati_Transaction_History__c/fields/CardType__c.field-meta.xml
<CustomField>
    <fullName>CardType__c</fullName>
    <label>CardType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>