force-app/main/default/objects/Magnati_Transaction_History__c/fields/Payment_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Payment_Attempt__c</fullName>
    <label>Payment Attempt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>