force-app/main/default/objects/Magnati_Transaction_History__c/fields/ResponseCode__c.field-meta.xml
<CustomField>
    <fullName>ResponseCode__c</fullName>
    <label>ResponseCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>