force-app/main/default/objects/Magnati_Transaction_History__c/fields/Updated_From__c.field-meta.xml
<CustomField>
    <fullName>Updated_From__c</fullName>
    <label>Updated From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Webhook</fullName>
            </value>
            <value>
                <fullName>Update Status</fullName>
            </value>
            <value>
                <fullName>Retry batch</fullName>
            </value>
            <value>
                <fullName>Finalization API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>